--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     <div class="main">
       <div id="main_profile">
         <img src="images/img1.jpg" alt="프로필 사진" class="profile_img">
-        <h1>DA RAM <span>LEE :) </span></h1>
+        <h1>JIN SU <span>LEE :) </span></h1>
         <p class="info">TEL. <span>010-4567-7856</span> | E-mail. <span>web455@gmail.com</span>
                         ADDRESS. <span>10-1, Baengnyong-ro, Dong-gu, Daejeon </span>
         </p>
