--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
         <div id="main_profile">
             <img src="images/img1.jpg" alt="프로필 사진" class="profile_img">
             <h1>이진수</h1>
+            <h2>보이지 않는 가치를 만드는 개발자</h2>
             <p class="info">
                 TEL. <span>010-1234-5678</span> | E-mail. <span>example@naver.com</span>
                 | ADDRESS. <span>경기도 화성시 (이하 생략)</span>
