--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
                 <li><a href="#education">Education</a></li>
                 <li><a href="#experience">Experience</a></li>
                 <li><a href="#skills">Skill</a></li>
+                <li><a href="#license">License</a></li>
                 <li><a href="#contact">Contact</a></li>
             </ul>
         </nav>
@@ -92,6 +93,32 @@
             <div class="skill-bar"><div class="skill-level" style="width: 80%;"></div></div>
         </div>
     </section>
+
+
+    <div id="license">
+        <h2>기술 자격증</h2>
+        <h3 class="certi">정보처리기사 (취득 예정)</h3>
+        <p class="date"> May 2026</p>
+        <ul>
+          <li>한국산업인력공단</li>
+        </ul>
+        <h3 class="certi">AI FUTURE 2급</h3>
+        <p class="date"> July 2024</p>
+        <ul>
+          <li>AICE</li>
+        </ul>
+        <h3 class="certi">운전면허 1종 보통</h3>
+        <p class="date"> March 2023</p>
+        <ul>
+          <li>한국도로교통공단</li>
+        </ul>
+        <h3 class="certi">Google Analytics Certification</h3>
+        <p class="date"> May 2025</p>
+        <ul>
+          <li>Google</li>
+        </ul>
+    </div><!--certificates-->
+
 
     <section id="contact">
         <h2>Contact</h2>
