--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
             <h1>이진수</h1>
             <h2>보이지 않는 가치를 만드는 개발자</h2>
             <p class="info">
-                TEL. <span>010-1234-5678</span> | E-mail. <span>example@naver.com</span>
+                TEL. <span>010-8005-5726</span> | E-mail. <span>jjkkhh456@naver.com</span>
                 | ADDRESS. <span>경기도 화성시 (이하 생략)</span>
             </p>
             <p>
@@ -67,8 +67,6 @@
             <p class="date">2024.09 ~ 2024.11</p>
             <li>- R Studio/R </li>
             <li>- ARIMA 모델 훈련 </li>
-            <li><strong>재난현장 정보 수집로봇</strong></li>
-            <p class="date">2025.05 ~ </p>
             <li>- Python </li>
         </ul>
     </div>
@@ -78,19 +76,19 @@
         <h2>Skill</h2>
         <div class="skill">
             <p>C/C++</p>
-            <div class="skill-bar"><div class="skill-level" style="width: 60%;"></div></div>
+            <div class="skill-bar"><div class="skill-level" style="width: 80%;"></div></div>
         </div>
         <div class="skill">
             <p>Adobe Photoshop</p>
-            <div class="skill-bar"><div class="skill-level" style="width: 70%;"></div></div>
+            <div class="skill-bar"><div class="skill-level" style="width: 40%;"></div></div>
         </div>
         <div class="skill">
             <p>Python</p>
-            <div class="skill-bar"><div class="skill-level" style="width: 85%;"></div></div>
+            <div class="skill-bar"><div class="skill-level" style="width: 90%;"></div></div>
         </div>
         <div class="skill">
             <p>Java</p>
-            <div class="skill-bar"><div class="skill-level" style="width: 80%;"></div></div>
+            <div class="skill-bar"><div class="skill-level" style="width: 70%;"></div></div>
         </div>
     </section>
 
@@ -122,8 +120,9 @@
 
     <section id="contact">
         <h2>Contact</h2>
-        <p>Email: Example@naver.com</p>
-        <p>Phone: 010-1234-1234</p>
+        <p>Email: jjkkhh456@naver.com</p>
+        <p>Phone: 010-8005-5726</p>
     </section>
 </body>
 </html>
+
