--- a/index.html
+++ b/index.html
@@ -54,12 +54,15 @@
     <h2>경력사항</h2>
     <div class="experience-item">
         <h3>우송대 소프트웨어 교육 <span>2025.03 ~ 2025.09</span></h3>
-        <p class="date">2023.01 - 2025.03</p>
+        <p class="date">2025.03 - 2025.09</p>
+        <h3>바이오 헬스 아카데미 교육 <span>2025.11 ~ 2026.02</span></h3>
+        <p class="date">2025.03 - 2025.09</p>
         <p class="work">프로젝트 경험</p>
         <ul>
-            <li><strong>유전알고리즘 구현 프로젝트</strong></li>
+            <li><strong>유전알고리즘 시뮬레이션 프로젝트</strong></li>
             <p class="date">2023.09 ~ 2024.11</p>
             <li>- C언어 </li>
+            <ul>
             <li><strong>MySQL을 활용한 전기 자전거 관리 프로젝트</strong></li>
             <p class="date">2023.09 ~ 2024.11</p>
             <li>- SQL </li>
@@ -125,4 +128,5 @@
     </section>
 </body>
 </html>
+
 
