--- a/index.html
+++ b/index.html
@@ -62,7 +62,6 @@
             <li><strong>유전알고리즘 시뮬레이션 프로젝트</strong></li>
             <p class="date">2023.09 ~ 2024.11</p>
             <li>- C언어 </li>
-            <br>
             <li><strong>MySQL을 활용한 전기 자전거 관리 프로젝트</strong></li>
             <p class="date">2023.09 ~ 2024.11</p>
             <li>- SQL </li>
@@ -71,6 +70,18 @@
             <li>- R Studio/R </li>
             <li>- ARIMA 모델 훈련 </li>
             <li>- Python </li>
+            <li><strong>시각 약자를 위한 얼굴 인식 보조 시스템</strong></li>
+            <p class="date">2025.4 ~ 2025.9</p>
+            <li>- Python
+            <li>- MariaDB
+            <li>- Flask
+            <li>- **https://github.com/jjkkhh123/Tracking_Project**
+            <li><strong>채팅형 통합관리 서비스</strong></li>
+            <p class="date">2025.10 ~ 2025.12</p>
+            <li>- Vite
+            <li>- TypeScript
+            <li>- React
+            <li>- **https://github.com/jjkkhh123/PIMS-Multi-Model-LifeONE-**
         </ul>
     </div>
     </section>
@@ -128,6 +139,7 @@
     </section>
 </body>
 </html>
+
 
 
 
