--- a/index.html
+++ b/index.html
@@ -72,16 +72,16 @@
             <li>- Python </li>
             <li><strong>시각 약자를 위한 얼굴 인식 보조 시스템</strong></li>
             <p class="date">2025.4 ~ 2025.9</p>
-            <li>- Python
-            <li>- MariaDB
-            <li>- Flask
-            <li>- **https://github.com/jjkkhh123/Tracking_Project**
+            <li>- Python </li>
+            <li>- MariaDB </li>
+            <li>- Flask </li>
+            <li>- **https://github.com/jjkkhh123/Tracking_Project** </li>
             <li><strong>채팅형 통합관리 서비스</strong></li>
             <p class="date">2025.10 ~ 2025.12</p>
-            <li>- Vite
-            <li>- TypeScript
-            <li>- React
-            <li>- **https://github.com/jjkkhh123/PIMS-Multi-Model-LifeONE-**
+            <li>- Vite </li>
+            <li>- TypeScript </li>
+            <li>- React </li>
+            <li>- **https://github.com/jjkkhh123/PIMS-Multi-Model-LifeONE-** </li>
         </ul>
     </div>
     </section>
@@ -139,6 +139,7 @@
     </section>
 </body>
 </html>
+
 
 
 
