--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
             <li>- Vite </li>
             <li>- TypeScript </li>
             <li>- React </li>
-            <li>- **https://github.com/jjkkhh123/PIMS-Multi-Model-LifeONE-** </li>
+            <li>- [채팅형 통합관리 서비스](https://github.com/jjkkhh123/PIMS-Multi-Model-LifeONE-) </li>
         </ul>
     </div>
     </section>
@@ -139,6 +139,7 @@
     </section>
 </body>
 </html>
+
 
 
 
